--- a/packages/design-system/ui/components/select/base/_index.scss
+++ b/packages/design-system/ui/components/select/base/_index.scss
@@ -60,6 +60,7 @@
       height: 0;
       border-left: 3px solid transparent;
       border-right: 3px solid transparent;
+      pointer-events: none;
     }
 
     &:before {
