fix checkbox toggle in RTL (#3696)
* fix checkbox toggle in RTL

* change label to re 'Right to Left'

--- a/packages/design-system/ui/components/checkbox-toggle/base/_index.scss
+++ b/packages/design-system/ui/components/checkbox-toggle/base/_index.scss
@@ -150,6 +150,8 @@
           height: 0.7rem; // Seems silly to tokenize?
           width: 0.45rem;
           border-bottom: $border-width-thick solid $color-border-toggle-checked;
+          /* stylelint-disable comment-empty-line-before */
+          /*! @noflip */
           border-right: $border-width-thick solid $color-border-toggle-checked;
           border-radius: 0;
           background-color: transparent;
