--- a/packages/design-system/ui/components/feeds/comment/_deprecate.scss
+++ b/packages/design-system/ui/components/feeds/comment/_deprecate.scss
@@ -17,9 +17,22 @@
     }
 
     .slds-comment {
-      @include feed-vertical-rule($square-icon-medium-boundary-alt);
       margin-bottom: 0;
       padding-bottom: $spacing-medium;
+      position: relative;
+
+      &:before {
+        content: '';
+        background: $color-border;
+        height: 100%;
+        width: $border-width-thin;
+        position: absolute;
+        left: ($square-icon-medium-boundary-alt / 2);
+        top: 0;
+        bottom: 0;
+        margin-left: (($square-icon-medium-boundary-alt / 2) * -1);
+        z-index: -1;
+      }
     }
 
     .slds-avatar {
