--- a/packages/design-system/ui/components/global-header/base/_deprecate.scss
+++ b/packages/design-system/ui/components/global-header/base/_deprecate.scss
@@ -143,7 +143,7 @@
     &__icon,
     &__icon .slds-icon,
     &__icon .slds-button__icon {
-      @include square($square-icon-global-identity-icon);
+      @include square(1.25rem);
     }
   }
 }
