--- a/packages/design-system/ui/utilities/visibility/_index.scss
+++ b/packages/design-system/ui/utilities/visibility/_index.scss
@@ -13,17 +13,7 @@
  * @modifier
  */
 .slds-assistive-text {
-  // scss-lint:disable ImportantRule
-  position: absolute !important;
-  margin: -1px !important;
-  border: 0 !important;
-  padding: 0 !important;
-  width: 1px !important;
-  height: 1px !important;
-  overflow: hidden !important;
-  clip: rect(0 0 0 0) !important;
-  text-transform: none !important;
-  white-space: nowrap !important; // https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
+  @include assistive-text;
 }
 
 /**
@@ -35,7 +25,7 @@
  */
 .slds-assistive-text_focus,
 .slds-assistive-text--focus {
-  // scss-lint:disable ImportantRule
+
   &:focus {
     margin: inherit !important;
     border: inherit !important;
