fix(button): add restriction rule for .slds-button_reset (#3712)
* fix(button): add restriction rule for .slds-button_reset

* fix(button): update reset restriction rule

--- a/packages/design-system/ui/components/buttons/base/_index.scss
+++ b/packages/design-system/ui/components/buttons/base/_index.scss
@@ -102,6 +102,7 @@ a.slds-button--inverse:focus {
  * @name reset
  * @summary Resets attributes of .slds-button back to the browser default
  * @selector .slds-button_reset
+ * @restrict button, a, span
  * @modifier
  * @group theme
  */
