chore(docs): Migrate docked composer to mdx (#3720)
* chore(docs): Migrate docked composer to mdx

* Add doc class

--- a/packages/design-system/ui/components/docked-composer/email/_index.scss
+++ b/packages/design-system/ui/components/docked-composer/email/_index.scss
@@ -37,8 +37,10 @@
     transform: translateY(-50%);
   }
 
-  .slds-combobox_container {
+  .slds-combobox_container,
+  .slds-input[value] {
     border: 0;
+    box-shadow: none;
   }
 }
 
