Summer-to-Winter Merge (#3786)
* chore(docs): Migrate Tiles docs to mdx

* missing file

* chore(docs) - textarea mdx

* chore(docs): Migrate Spinners docs to mdx (#3779)

* Update Spinners docs to MDX

* Add missing _brand modifier example to array, break out modifiers into their own section

* Add additional annotations, add additional examples for thoroughness, update MDX documentation

* Remove extra example strings, update MDX headings and structure

* Remove extra whitespace

* Remove modifiers and utilities that were used in incorrect examples

* chore(scoped-tabs): Migrate scoped-tabs to mdx (#3764)

* textarea mdx - consistent code around code snippets

* migrate Summary Detail docs to mdx (#3772)

* migrate Tooltips docs to mdx (#3777)

* migrate Toast docs to mdx (#3775)

* migrate Timepicker docs to mdx (#3773)

* migrate Split View docs to mdx (#3771)

* migrate Slider docs to mdx (#3769)

* migrate Select docs to mdx (#3768)

* fix(docs): Correct bad link (#3784)

Signed-off-by: Fred Boyle <fboyle@salesforce.com>

* chore(docs) - Migrate Visual Picker to MDX (#3783)

* chore(docs): update trial-bar docs to mdx (#3781)

--- a/packages/design-system/ui/components/spinners/base/_index.scss
+++ b/packages/design-system/ui/components/spinners/base/_index.scss
@@ -47,6 +47,12 @@
   transform: translate(-50%, -50%) rotate(90deg);
 }
 
+/**
+ * @summary Returns the spinner back into the document flow
+ * @selector .slds-spinner_inline
+ * @restrict .slds-spinner
+ * @modifier
+ */
 .slds-spinner_inline {
   position: relative;
   top: auto;
@@ -194,6 +200,7 @@
  *
  * @selector .slds-spinner_inverse
  * @restrict .slds-spinner
+ * @modifier
  */
 
 .slds-spinner_inverse,
