feat(buttons, button-icon, file-selector): Add larger tap targets for touch devices via media queries (#3700)
* Add touch-device media query mixin

* Update buttons and add token

* Update button icons and add token

* Update checkbox button group and add token

* Remove max-height for file selector button

* Update radio button group and add token

* Attempt to fix Travis checksum error

* Travis Fix 2: Electric Boogaloo

* Revert nvm install version

* Travis #3!

* Update package-lock.json

* Standardize token nomenclature

* Update package-lock.json

--- a/packages/design-system/ui/components/button-icons/base/_index.scss
+++ b/packages/design-system/ui/components/button-icons/base/_index.scss
@@ -32,6 +32,10 @@
   line-height: $line-height-reset;
   vertical-align: middle;
   color: $color-text-icon-default;
+
+  @include touch-device {
+    @include square($button-icon-boundary-touch);
+  }
 }
 
 /**
@@ -53,6 +57,10 @@
 .slds-button_icon-container-more,
 .slds-button--icon-container-more {
   @include square($square-icon-medium-boundary);
+
+  @include touch-device {
+    @include square($button-icon-boundary-touch);
+  }
 }
 
 /**
@@ -183,6 +191,10 @@
 .slds-button_icon-small,
 .slds-button--icon-small {
   @include square($square-icon-small-boundary);
+
+  @include touch-device {
+    @include square($button-icon-boundary-touch);
+  }
 }
 
 /**
@@ -196,6 +208,10 @@
 .slds-button--icon-x-small {
   @include square($square-icon-x-small-boundary);
   line-height: $line-height-reset;
+
+  @include touch-device {
+    @include square($button-icon-boundary-touch);
+  }
 
   .slds-button__icon {
     @include square($square-icon-small-content);
@@ -213,6 +229,10 @@
 .slds-button--icon-xx-small {
   @include square($square-icon-xx-small-boundary);
   line-height: $line-height-reset;
+
+  @include touch-device {
+    @include square($button-icon-boundary-touch);
+  }
 
   .slds-button__icon {
     @include square($square-icon-x-small-content);
@@ -232,6 +252,10 @@
   background-color: $button-color-background-primary;
   border-color: $button-color-border-primary;
   color: $color-text-icon-default;
+
+  @include touch-device {
+    @include square($button-icon-boundary-touch);
+  }
 
   &:hover,
   &:focus {
