fix(app-launcher): update app-launcher states to brand-accessible-active (#3837)
* fix(app-launcher): update app-launcher states to brand-accessible-active

--- a/packages/design-system/ui/components/app-launcher/base/_index.scss
+++ b/packages/design-system/ui/components/app-launcher/base/_index.scss
@@ -20,9 +20,10 @@
   cursor: move;
 
   &:hover,
-  &:focus {
+  &:focus,
+  &:active {
     outline: 0;
-    border-color: $color-border-selection-hover;
+    border-color: $brand-accessible-active;
   }
 
   /**
