feat(type): Increase body font size for touch devices (#3832)
* feat(type): increase body font size for touch devices
remove redundant form-factor token

* feat(type): increase touch font size for static input

--- a/packages/design-system/ui/components/input/base/_index.scss
+++ b/packages/design-system/ui/components/input/base/_index.scss
@@ -29,6 +29,10 @@
     background-color: transparent;
     font-size: $input-static-font-size;
     font-weight: $input-readonly-font-weight; // This is a plain readonly input. It should not have the text treatment that static has.
+
+    @include touch-device {
+      font-size: $font-size-5;
+    }
   }
 
   &[type="search"]::-ms-clear {
