feat(input): increase tap target size (#3835)
* feat(input): create mixin for components that rely on line-height for overall height
Create standard token for touch height

* feat(input): remove form-factor/small/sizing after height-input became deprecated
add touch height to input

* feat(input): fix how increment buttons are vertically centered
New vertical-center mixin

--- a/packages/design-system/ui/components/input/base/_index.scss
+++ b/packages/design-system/ui/components/input/base/_index.scss
@@ -19,6 +19,10 @@
   line-height: $height-input;
   min-height: calc(#{$height-input} + (#{$border-width-thin} * 2)); // For IE
 
+  @include touch-device {
+    @include border-box-line-height($height-tappable);
+  }
+
   /**
    * @selector [readonly]
    * @restrict .slds-input
@@ -297,8 +301,7 @@
  * @restrict button
  */
 .slds-input__button_decrement {
-  position: absolute;
-  bottom: 0.25rem;
+  @include vertical-center;
   left: 0.75rem;
 }
 
@@ -309,7 +312,6 @@
  * @restrict button
  */
 .slds-input__button_increment {
-  position: absolute;
-  bottom: 0.25rem;
+  @include vertical-center;
   right: 0.75rem;
 }
