--- a/packages/design-system/ui/dependencies/_layout.scss
+++ b/packages/design-system/ui/dependencies/_layout.scss
@@ -90,3 +90,16 @@
   align-items: center;
   margin: auto;
 }
+
+// Useful in situations where flexbox isn't appropiate or possible
+@mixin vertical-center {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+// Treats line-height as if it has box-sizing: border-box behavior
+// Useful for blueprints that rely on line-height for their overall height
+@mixin border-box-line-height($value, $border: $border-width-thin * 2, $padding: 0) {
+  line-height: $value - rem($border + $padding);
+}
