feat(storybook): Add SLDS theme and background addon (#3834)
* feat(storybook): Add SLDS theme and background addon

* Add explicit version for addon

--- a/packages/design-system/.storybook/scss/ui/index.scss
+++ b/packages/design-system/.storybook/scss/ui/index.scss
@@ -1,7 +1,8 @@
 /* overriding the story iframe showcase styles to accommodate Touch devices */
 
+html { background: transparent !important; }
+
 .sb-show-main {
-  background: white;
   padding: 2rem;
   min-height: 100vh;
 
