feat(buttons): Center icons (#3836)
* consolidate styles in Storybook UI

* change display rule of buttons

* center stretch button

* justify button contents on slds-button

* center icon on in stateful buttons

* update button release notes

* update tests

* move horizontal centering to button mixin

* update tests

* update release notes

* move justify-content to slds-button_icon

* update tests

* justify button contents center from space-around

* add back vertical-align in Button Icon

* add back vertical-align to Button mixin

* update tests

--- a/packages/design-system/ui/components/buttons/base/_index.scss
+++ b/packages/design-system/ui/components/buttons/base/_index.scss
@@ -14,7 +14,8 @@
  */
 .slds-button {
   position: relative;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   padding: 0;
   background: transparent;
   background-clip: border-box;
