--- a/packages/design-system/ui/components/button-icons/base/_index.scss
+++ b/packages/design-system/ui/components/button-icons/base/_index.scss
@@ -31,6 +31,7 @@
 .slds-button--icon-error {
   line-height: $line-height-reset;
   vertical-align: middle;
+  justify-content: center;
   color: $color-text-icon-default;
 
   @include touch-device {
