fix(form-element): add space touch size buttons (#3866)

--- a/packages/design-system/ui/components/form-element/base/_index.scss
+++ b/packages/design-system/ui/components/form-element/base/_index.scss
@@ -90,6 +90,10 @@
 
   .slds-form-element__static {
     width: calc(100% - #{$square-icon-small-boundary}); // Leave space for edit icon
+
+    @include touch-device {
+      width: calc(100% - #{$square-tappable});
+    }
   }
 }
 
