fix(icons): Increase size of icons in buttons and inputs for touch devices (#3852)
* feat(icons): set size of icons in buttons and inputs to square-icon-medium-content (16px) for touch devices

--- a/packages/design-system/ui/components/buttons/base/_index.scss
+++ b/packages/design-system/ui/components/buttons/base/_index.scss
@@ -312,6 +312,10 @@ a.slds-button--inverse:focus {
 .slds-button__icon {
   @include square($square-icon-medium-content-alt);
   fill: currentColor;
+
+  @include touch-device {
+    @include square($square-icon-medium-content);
+  }
 }
 
 /**
