--- a/packages/design-system/ui/components/input/base/_index.scss
+++ b/packages/design-system/ui/components/input/base/_index.scss
@@ -145,8 +145,15 @@
     border: 0; // Re-aligns icons to center
     z-index: 2;
 
+    @include touch-device {
+      @include square($square-icon-medium-content);
+    }
+
     /* @Todo - we need to be sure this is deprecated since the color sems to be the correct gray I see in specs */
-    @include deprecate('4.0.0', 'Use .slds-icon-text-default on the SVG icon instead') {
+    @include deprecate(
+      '4.0.0',
+      'Use .slds-icon-text-default on the SVG icon instead'
+    ) {
       fill: $color-text-input-icon;
     }
   }
