chore(checkbox): Clean up IDs and add new example component (#3879)
* chore(checkbox): new component to compose standalone checkbox in form element

* chore(checkbox-button-group): make input ids unique

--- a/packages/design-system/ui/components/checkbox/form-element/_index.scss
+++ b/packages/design-system/ui/components/checkbox/form-element/_index.scss
@@ -2,7 +2,7 @@
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 /**
- * @summary
+ * @summary Checkbox with top-level label and value != label
  * @name form-element
  * @selector .slds-checkbox_standalone
  * @restrict .slds-checkbox
